--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ipfs_kit_cjs",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "This is a library that handles ipfs and ipfs cluster , using client js, REST interfaces to host",
     "type": "module",
     "main": "index.js",
@@ -11,16 +11,25 @@
         "util": "^0.12.5"
     },
     "scripts": {
+        "dev": "webpack serve --no-client-overlay",
+        "build": "webpack && npm run typegen",
         "test": " node tests/test.js"
     },
+    "devDependencies": {
+        "webpack": "^5.80.0",
+        "webpack-cli": "^5.0.2",
+        "webpack-dev-server": "^4.13.3"
+      },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/endomorphosis/libp2p_kit_js.git"
+        "url": "git+https://github.com/endomorphosis/ipfs_kit_cjs.git"
     },
     "author": "Benjamin Barber",
     "license": "AGPL-3.0-only",
+    "jsdelivr": "./dist/ipfs_kit_cjs.min.js",
+    "unpkg": "./dist/ipfs_kit_cjs.min.js",
     "bugs": {
-        "url": "https://github.com/endomorphosis/libp2p_kit_js/issues"
+        "url": "https://github.com/endomorphosis/ipfs_kit_cjs/issues"
     },
-    "homepage": "https://github.com/endomorphosis/libp2p_kit_js#readme"
+    "homepage": "https://github.com/endomorphosis/ipfs_kit_cjs#readme"
 }
